--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
    <div class="results">
       <h3>Your Choice is : <span id="choose"></span></h3>
       <h3>PC Choice is : <span id="pcPicked"></span></h3>
+      <span>Your Score : <span class="score"></span> . . . </span>
+      <span>PC Score : <span class="pc-score"></span></span>
       <h3 id="result" style="width: fit-content;padding: 5px;"></h3>
    </div>
 
@@ -27,55 +29,73 @@
       const pc = document.getElementById("pcPicked");
       const forPc = ["rock", "paper", "scissors"];
       const result = document.getElementById("result");
+      const playerScore = document.querySelector(".score")
+      const pcScore = document.querySelector(".pc-score")
+      let playerCounter = 1;
+      let pcCounter = 1;
 
       btn.forEach(button => {
          button.addEventListener("click", () => {
             const randomizer = (Math.round(Math.random() * 2));
             pc.textContent = forPc[randomizer].toUpperCase();
             player.textContent = button.value.toUpperCase();
+            logic()
+            keepingScore()
 
-            if (player.textContent === pc.textContent) {
-               result.textContent = "It's A Draw.!";
-               result.style.background = 'yellow';
-               result.style.color = "black";
 
-            }
-            if (player.textContent == "ROCK" && pc.textContent == "PAPER") {
-               result.textContent = "You Lose! :(";
-               result.style.background = 'red';
-               result.style.color = "white";
-
-            }
-            if (player.textContent == "ROCK" && pc.textContent == "SCISSORS") {
-               result.textContent = "You Win. :>";
-               result.style.color = "white";
-               result.style.background = 'green';
-            }
-            if (player.textContent == "PAPER" && pc.textContent == "ROCK") {
-               result.textContent = "You Win. :>";
-               result.style.color = "white";
-               result.style.background = 'green';
-            }
-            if (player.textContent == "PAPER" && pc.textContent == "SCISSORS") {
-               result.textContent = "You Lose! x(";
-               result.style.background = 'red';
-               result.style.color = "white";
-
-            }
-            if (player.textContent == "SCISSORS" && pc.textContent == "ROCK") {
-               result.textContent = "You Lose! :(";
-               result.style.background = 'red';
-               result.style.color = "white";
-
-            }
-            if (player.textContent == "SCISSORS" && pc.textContent == "PAPER") {
-               result.textContent = "You Win. ;)";
-               result.style.color = "white";
-               result.style.background = 'green';
-            }
          })
       })
+      function logic() {
+         if (player.textContent === pc.textContent) {
+            result.textContent = "It's A Draw.!";
+            result.style.background = 'yellow';
+            result.style.color = "black";
 
+         }
+         if (player.textContent == "ROCK" && pc.textContent == "PAPER") {
+            result.textContent = "You Lose! :(";
+            result.style.background = 'red';
+            result.style.color = "white";
+
+         }
+         if (player.textContent == "ROCK" && pc.textContent == "SCISSORS") {
+            result.textContent = "You Win. ;)";
+            result.style.color = "white";
+            result.style.background = 'green';
+         }
+         if (player.textContent == "PAPER" && pc.textContent == "ROCK") {
+            result.textContent = "You Win. ;)";
+            result.style.color = "white";
+            result.style.background = 'green';
+         }
+         if (player.textContent == "PAPER" && pc.textContent == "SCISSORS") {
+            result.textContent = "You Lose! :(";
+            result.style.background = 'red';
+            result.style.color = "white";
+
+         }
+         if (player.textContent == "SCISSORS" && pc.textContent == "ROCK") {
+            result.textContent = "You Lose! :(";
+            result.style.background = 'red';
+            result.style.color = "white";
+
+         }
+         if (player.textContent == "SCISSORS" && pc.textContent == "PAPER") {
+            result.textContent = "You Win. ;)";
+            result.style.color = "white";
+            result.style.background = 'green';
+         }
+      }
+      function keepingScore() {
+         if (result.textContent == ("You Win. ;)")) {
+            playerScore.innerText = playerCounter;
+            playerCounter++;
+         }
+         if (result.textContent == ("You Lose! :(")) {
+            pcScore.innerText = pcCounter;
+            pcCounter++;
+         }
+      }
 
    </script>
 </body>
